--- a/results.html
+++ b/results.html
@@ -136,7 +136,7 @@
                 loading="lazy"
               ></iframe>
             </div>
-            <div class="embed-note">Replace the URL with your exact Calendly link.</div>
+            <div class="embed-note">https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01</div>
           </div>
 
           <div class="float float-1" aria-hidden="true"></div>
@@ -156,27 +156,51 @@
 
         <div class="proof-grid reveal">
           <figure class="proof-tile">
-            <img src="./assets/proof-1.png" alt="Proof screenshot 1" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <img src="./proof1.png" alt="Proof screenshot 1" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
             <div class="proof-fallback">Proof Screenshot</div>
           </figure>
           <figure class="proof-tile">
-            <img src="./assets/proof-2.png" alt="Proof screenshot 2" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <img src="./proof2.png" alt="Proof screenshot 2" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
             <div class="proof-fallback">Proof Screenshot</div>
           </figure>
           <figure class="proof-tile">
-            <img src="./assets/proof-3.png" alt="Proof screenshot 3" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <img src="./proof3.png" alt="Proof screenshot 3" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
             <div class="proof-fallback">Proof Screenshot</div>
           </figure>
           <figure class="proof-tile">
-            <img src="./assets/proof-4.png" alt="Proof screenshot 4" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <img src="./proof4.png" alt="Proof screenshot 4" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
             <div class="proof-fallback">Proof Screenshot</div>
           </figure>
           <figure class="proof-tile">
-            <img src="./assets/proof-5.png" alt="Proof screenshot 5" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <img src="./proof5.png" alt="Proof screenshot 5" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
             <div class="proof-fallback">Proof Screenshot</div>
           </figure>
           <figure class="proof-tile">
-            <img src="./assets/proof-6.png" alt="Proof screenshot 6" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <img src="./proof6.png" alt="Proof screenshot 6" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+           <figure class="proof-tile">
+            <img src="./proof7.png" alt="Proof screenshot 7" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+           <figure class="proof-tile">
+            <img src="./proof8.png" alt="Proof screenshot 8" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+           <figure class="proof-tile">
+            <img src="./proof9.png" alt="Proof screenshot 9" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+           <figure class="proof-tile">
+            <img src="./proof10.png" alt="Proof screenshot 10" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+           <figure class="proof-tile">
+            <img src="./proof11.png" alt="Proof screenshot 11" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+            <div class="proof-fallback">Proof Screenshot</div>
+          </figure>
+           <figure class="proof-tile">
+            <img src="./proof12.png" alt="Proof screenshot 12" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
             <div class="proof-fallback">Proof Screenshot</div>
           </figure>
         </div>
