--- a/results.html
+++ b/results.html
@@ -27,7 +27,7 @@
   <header class="header" id="top">
     <div class="container header-inner">
       <a class="brand" href="./index.html" aria-label="ONIX Home">
-        <img class="brand-logo" src="./assets/logo2.png" alt="ONIX logo" onerror="this.style.display='none'" />
+        <img class="brand-logo" src="./logo2.png" alt="ONIX logo" onerror="this.style.display='none'" />
         <span class="brand-name">ONIX</span>
       </a>
 
