--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ONIX — Your pipeline, on autopilot.</title>
   <meta name="description" content="ONIX: Done-for-you acquisition + follow-up system. Book more calls with a Stripe-level, premium pipeline engine." />
-  <link rel="icon" href="./logo2.png" />
+  <link rel="icon" href="logo2.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
   <header class="header" id="top">
     <div class="container header-inner">
       <a class="brand" href="./index.html" aria-label="ONIX Home">
-        <img class="brand-logo" src="./assets/logo2.png" alt="ONIX logo" onerror="this.style.display='none'" />
+        <img class="brand-logo" src="logo2.png" alt="ONIX logo" onerror="this.style.display='none'" />
         <span class="brand-name">ONIX</span>
       </a>
 
@@ -628,6 +628,7 @@
 <!-- =========================
      END: index.html
 ========================= -->
+
 
 
 
