--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
             <div class="proof-track" data-proof-track>
               <!-- If images missing, cards still render -->
               <figure class="proof proof-a">
-                <img src="./proof1.png" alt="Client message proof 1" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+                <img src="proof1.png" alt="Client message proof 1" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
                 <div class="proof-fallback">Proof Screenshot</div>
               </figure>
               <figure class="proof proof-b">
-                <img src="./proof2.png" alt="Client message proof 2" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+                <img src="proof2.png" alt="Client message proof 2" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
                 <div class="proof-fallback">Proof Screenshot</div>
               </figure>
               <figure class="proof proof-c">
-                <img src="./proof3.png" alt="Client message proof 3" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+                <img src="proof3.png" alt="Client message proof 3" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
                 <div class="proof-fallback">Proof Screenshot</div>
               </figure>
               <figure class="proof proof-d">
-                <img src="./proof4.png" alt="Client message proof 4" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
+                <img src="proof4.png" alt="Client message proof 4" loading="lazy" onerror="this.closest('figure').classList.add('is-missing')" />
                 <div class="proof-fallback">Proof Screenshot</div>
               </figure>
             </div>
@@ -626,6 +626,7 @@
 <!-- =========================
      END: index.html
 ========================= -->
+
 
 
 
