--- a/index.html
+++ b/index.html
@@ -217,7 +217,12 @@
 
         <div class="outcome-grid">
           <article class="glass card outcome reveal" style="--d: 70ms">
-            <div class="outcome-ic" aria-hidden="true"></div>
+            <div class="outcome-ic">
+                 <svg viewBox="0 0 24 24" class="ic" aria-hidden="true">
+                      <path d="M4 12.5l5 5L20 6.5" fill="none" stroke="currentColor" stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round"/>
+                 </svg>
+            </div>
+
             <h3>Calls Booked, Automatically</h3>
             <p>Lead capture → instant response → multi-touch follow-up → calendar booking — without manual chasing.</p>
             <div class="mini-metric">
@@ -227,7 +232,13 @@
           </article>
 
           <article class="glass card outcome reveal" style="--d: 120ms">
-            <div class="outcome-ic alt" aria-hidden="true"></div>
+           <div class="outcome-ic alt">
+                <svg viewBox="0 0 24 24" class="ic" aria-hidden="true">
+                     <path d="M4 19c2.2-3.6 5.3-5.4 8.6-5.4 3.4 0 6.2 1.6 7.4 4.8" fill="none" stroke="currentColor" stroke-width="2.4" stroke-linecap="round"/>
+                     <path d="M7 10.5c0-2.7 2.2-4.9 4.9-4.9S16.8 7.8 16.8 10.5 14.6 15.4 11.9 15.4 7 13.2 7 10.5z" fill="none" stroke="currentColor" stroke-width="2.2"/>
+                </svg>
+           </div>
+
             <h3>Follow-up That Feels Human</h3>
             <p>Personalised sequences that keep conversations alive and move leads forward — even after hours.</p>
             <div class="mini-metric">
@@ -237,7 +248,13 @@
           </article>
 
           <article class="glass card outcome reveal" style="--d: 170ms">
-            <div class="outcome-ic alt2" aria-hidden="true"></div>
+            <div class="outcome-ic alt2">
+                 <svg viewBox="0 0 24 24" class="ic" aria-hidden="true">
+                      <path d="M4 18V6" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"/>
+                      <path d="M6.5 16l4-6 3 4 3.5-6 3 4" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
+                 </svg>
+            </div>
+
             <h3>Visibility in One Place</h3>
             <p>Know what’s working: sources, follow-up health, booked calls, and revenue attribution.</p>
             <div class="mini-metric">
