--- a/index.html
+++ b/index.html
@@ -574,11 +574,11 @@
               <iframe
                 title="Calendly"
                 class="calendly"
-                src="https://calendly.com/"
+                src="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01"
                 loading="lazy"
               ></iframe>
             </div>
-            <div class="embed-note">Tip: paste your Calendly link in <code>index.html</code> + <code>results.html</code>.</div>
+            <div class="embed-note">https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01 <code>index.html</code> + <code>results.html</code>.</div>
           </div>
         </div>
       </div>
@@ -586,55 +586,64 @@
   </main>
 
   <!-- FOOTER -->
-  <footer class="footer" aria-label="Footer">
-    <div class="container footer-grid">
+
+
+<footer class="footer">
+  <div class="container">
+    <div class="footer-grid">
       <div class="foot-col">
         <div class="foot-brand">
-          <img src="./logo2.png" alt="ONIX logo" onerror="this.style.display='none'" />
+          <img src="./logo2.png" alt="ONIX logo" loading="lazy">
           <div>
             <div class="foot-name">ONIX</div>
-            <div class="foot-tag">Marketing • 1–1 acquisition + follow-up system</div>
+            <div class="foot-tag">1–1 acquisition + follow-up system</div>
           </div>
         </div>
         <p class="foot-p">
-          Premium, minimal systems that turn enquiries into booked calls — and keep following up until you win.
+          We build a simple engine that turns enquiries into booked calls — without chasing leads all day.
         </p>
+        <div class="foot-chips">
+          <span class="chip small">Tradies</span>
+          <span class="chip small">Solar</span>
+          <span class="chip small">Agencies</span>
+          <span class="chip small">Local Service</span>
+        </div>
       </div>
 
       <div class="foot-col">
         <div class="foot-h">Pages</div>
-        <a href="./index.html">Home</a>
-        <a href="./results.html">Results</a>
-        <a href="#how">How it works</a>
-        <a href="#pricing">Pricing</a>
+        <a href="./index.html#how">How it works</a>
+        <a href="./index.html#results">Results</a>
+        <a href="./results.html">Results Page</a>
+        <a href="./index.html#book">Book a Call</a>
       </div>
 
       <div class="foot-col">
-        <div class="foot-h">Links</div>
-        <a href="#book">Book a call</a>
-        <a href="#top">Back to top</a>
-        <a href="./results.html">Case outcomes</a>
+        <div class="foot-h">Company</div>
+        <a href="./index.html#compare">Compare</a>
+        <a href="./index.html#engine">The Engine</a>
+        <a href="./index.html#faq">FAQ</a>
       </div>
 
       <div class="foot-col">
         <div class="foot-h">Contact</div>
-        <a href="#book">Schedule a call</a>
-        <span class="foot-muted">Replace with your email + socials</span>
-        <div class="foot-chips">
-          <span class="chip small">Fast</span>
-          <span class="chip small">Premium</span>
-          <span class="chip small">Minimal</span>
-        </div>
+        <div class="foot-muted">+64 21 563 431:</div>
+        <div class="foot-muted">Email: sales@onixmrkt.com</div>
+        <div class="foot-muted">Location: 49 Golf Road Tauranga New Zealand,3116</div>
+        <a class="btn btn-primary btn-sm" href="./index.html#book">Book a Call</a>
       </div>
     </div>
 
-    <div class="container foot-bottom">
+    <div class="foot-bottom">
       <div class="foot-line"></div>
       <div class="foot-bottom-row">
-        <span>© <span data-year></span> ONIX. All rights reserved.</span>
-        <span class="foot-muted">Built for booked calls.</span>
+        <div>© <span id="year"></span> ONIX. All rights reserved.</div>
+        <div class="foot-muted">Built to book calls — fast.</div>
       </div>
     </div>
+  </div>
+</footer>
+
   </footer>
 
   <script src="./script.js"></script>
@@ -643,6 +652,7 @@
 <!-- =========================
      END: index.html
 ========================= -->
+
 
 
 
