--- a/results.html
+++ b/results.html
@@ -183,8 +183,8 @@
           </div>
 
           <div class="foot-col">
-            <div class="foot-h">Contact</div>
-            <div class="foot-muted">Email: hello@onix.com</div>
+            <div class="foot-h">Contact +64 21 563 431</div>
+            <div class="foot-muted">Email: sales@onixmrkt.com</div>
             <div class="foot-muted">Response: within 24h</div>
           </div>
         </div>
