--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container header-inner">
       <a class="brand" href="./index.html" aria-label="ONIX home">
         <!-- show full logo, no ONIX word next to it -->
-        <img class="brand-logo brand-logo--full" src="logo2.png" alt="ONIX logo" />
+        <img class="brand-logo" src="logo2.png" alt="ONIX logo" />
       </a>
 
       <nav class="nav" aria-label="Primary navigation">
@@ -475,9 +475,9 @@
 
           <div class="foot-col">
             <div class="foot-h">Navigate</div>
-            <a href="./results.html">Results Page</a>
+            <a href="./results.html">Results</a>
             <a href="#how">How it works</a>
-            <a href="#pricing">Pricing Covered</a>
+            <a href="#pricing">Pricing</a>
             <a href="#book">Book a Call</a>
           </div>
 
@@ -511,3 +511,4 @@
 <!-- =========================
      END: index.html
 ========================= -->
+
