--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ONIX — Your pipeline, on autopilot.</title>
   <meta name="description" content="Done-for-you acquisition + follow-up system that turns enquiries into booked calls." />
-  <link rel="icon" href="logo2.png" />
+  <link rel="icon" href="./logo2.png" />
 
   <!-- Inter -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,16 +30,16 @@
   <header class="header" data-header>
     <div class="container header-inner">
       <a class="brand" href="./index.html" aria-label="ONIX home">
-        <!-- show full logo, no ONIX word next to it -->
-        <img class="brand-logo" src="logo2.png" alt="ONIX logo" />
+        <!-- Raw logo (not contained) -->
+        <img class="brand-logo" src="./logo2.png" alt="ONIX logo" />
       </a>
 
       <nav class="nav" aria-label="Primary navigation">
-        <a href="./results.html">Results</a>
+        <a href="./results.html">Results Page</a>
         <a href="#how">How it works</a>
 
         <!-- Pricing covered (instead of pricing) -->
-        <a href="#pricing" class="is-muted">Pricing</a>
+        <a href="#pricing" class="is-muted">Pricing Covered</a>
 
         <a class="btn btn-primary btn-sm nav-cta" href="#book">Book a Call</a>
       </nav>
@@ -390,7 +390,7 @@
     </div>
   </section>
 
-  <!-- Pricing Covered (replaces pricing) -->
+  <!-- Pricing Covered -->
   <section id="pricing" class="section">
     <div class="container">
       <div class="section-head reveal">
@@ -439,21 +439,23 @@
             <div class="bb"><span class="bb-dot" aria-hidden="true"></span>Follow-up sequence for your niche</div>
             <div class="bb"><span class="bb-dot" aria-hidden="true"></span>Simple KPI targets for 30 days</div>
           </div>
+          <p class="embed-note">Replace the Calendly link in <code>index.html</code> + <code>results.html</code>.</p>
         </div>
 
         <div class="embed-wrap">
-          <iframe class="calendly" title="Calendly booking" src="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01" loading="lazy"></iframe>
+          <iframe class="calendly" title="Calendly booking" src="https://calendly.com/" loading="lazy"></iframe>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Footer (redesigned) -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="container">
       <div class="foot-top glass card">
         <div class="foot-brandline">
-          <img class="foot-logo" src="logo2.png" alt="ONIX logo" loading="lazy">
+          <!-- Raw logo (not contained) -->
+          <img class="foot-logo" src="./logo2.png" alt="ONIX logo" loading="lazy">
           <div class="foot-bl">
             <div class="foot-title">ONIX</div>
             <div class="foot-subtitle">Done-for-you acquisition + follow-up system</div>
@@ -475,21 +477,23 @@
 
           <div class="foot-col">
             <div class="foot-h">Navigate</div>
-            <a href="./results.html">Results</a>
+            <a href="./results.html">Results Page</a>
             <a href="#how">How it works</a>
-            <a href="#pricing">Pricing</a>
+            <a href="#pricing">Pricing Covered</a>
             <a href="#book">Book a Call</a>
           </div>
 
           <div class="foot-col">
             <div class="foot-h">Proof</div>
+            <a href="#results">Outcomes</a>
+            <a href="#compare">Compare</a>
             <a href="./results.html#proof">Screenshots</a>
           </div>
 
           <div class="foot-col">
-            <div class="foot-h">Contact: +64 21 563 431</div>
-            <div class="foot-muted">Email: sales@onixmrkt.com</div>
-            <div class="foot-muted">Location: 49 Golf Road Tauranga New Zealand,3116</div>
+            <div class="foot-h">Contact</div>
+            <div class="foot-muted">Email: hello@onix.com</div>
+            <div class="foot-muted">Location: Remote</div>
             <div class="foot-muted">Response: within 24h</div>
           </div>
         </div>
@@ -511,4 +515,3 @@
 <!-- =========================
      END: index.html
 ========================= -->
-
