--- a/results.html
+++ b/results.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ONIX — Results</title>
   <meta name="description" content="Client results and proof screenshots for ONIX." />
-  <link rel="icon" href="logo2.png" />
+  <link rel="icon" href="./logo2.png" />
 
   <!-- Inter -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,13 +29,14 @@
   <header class="header" data-header>
     <div class="container header-inner">
       <a class="brand" href="./index.html" aria-label="ONIX home">
-        <img class="brand-logo brand-logo--full" src="logo2.png" alt="ONIX logo" />
+        <!-- Raw logo (not contained) -->
+        <img class="brand-logo" src="./logo2.png" alt="ONIX logo" />
       </a>
 
       <nav class="nav" aria-label="Primary navigation">
-        <a href="./results.html" class="is-current">Results</a>
+        <a href="./results.html" class="is-current">Results Page</a>
         <a href="./index.html#how">How it works</a>
-        <a href="./index.html#pricing" class="is-muted">Pricing</a>
+        <a href="./index.html#pricing" class="is-muted">Pricing Covered</a>
         <a class="btn btn-primary btn-sm nav-cta" href="./index.html#book">Book a Call</a>
       </nav>
 
@@ -46,9 +47,9 @@
 
     <div id="mobileNav" class="mobile-nav" hidden data-mobile-nav>
       <div class="container mobile-nav-inner">
-        <a href="./results.html">Results</a>
+        <a href="./results.html">Results Page</a>
         <a href="./index.html#how">How it works</a>
-        <a href="./index.html#pricing">Pricing</a>
+        <a href="./index.html#pricing">Pricing Covered</a>
         <a class="btn btn-primary btn-block" href="./index.html#book">Book a Call</a>
       </div>
     </div>
@@ -117,8 +118,9 @@
           <a class="btn btn-primary btn-sm" href="./index.html#book">Home →</a>
         </div>
         <div class="embed-wrap">
-          <iframe class="calendly" title="Calendly booking" src="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01" loading="lazy"></iframe>
+          <iframe class="calendly" title="Calendly booking" src="https://calendly.com/" loading="lazy"></iframe>
         </div>
+        <p class="embed-note">Replace with your Calendly URL.</p>
       </aside>
     </div>
   </main>
@@ -133,19 +135,18 @@
       </div>
 
       <div class="proof-grid">
-        <!-- show 12 tiles (proof1..proof12) -->
-        <div class="proof-tile reveal"><img src="proof1.png" alt="Proof 1" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal" style="--d:40ms;"><img src="proof2.png" alt="Proof 2" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal" style="--d:80ms;"><img src="proof3.png" alt="Proof 3" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal"><img src="proof4.png" alt="Proof 4" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal" style="--d:40ms;"><img src="proof5.png" alt="Proof 5" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal" style="--d:80ms;"><img src="proof6.png" alt="Proof 6" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal"><img src="proof7.png" alt="Proof 7" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal" style="--d:40ms;"><img src="proof8.png" alt="Proof 8" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal" style="--d:80ms;"><img src="proof9.png" alt="Proof 9" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal"><img src="proof10.png" alt="Proof 10" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal" style="--d:40ms;"><img src="proof11.png" alt="Proof 11" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
-        <div class="proof-tile reveal" style="--d:80ms;"><img src="proof12.png" alt="Proof 12" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal"><img src="./proof1.png" alt="Proof 1" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal" style="--d:40ms;"><img src="./proof2.png" alt="Proof 2" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal" style="--d:80ms;"><img src="./proof3.png" alt="Proof 3" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal"><img src="./proof4.png" alt="Proof 4" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal" style="--d:40ms;"><img src="./proof5.png" alt="Proof 5" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal" style="--d:80ms;"><img src="./proof6.png" alt="Proof 6" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal"><img src="./proof7.png" alt="Proof 7" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal" style="--d:40ms;"><img src="./proof8.png" alt="Proof 8" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal" style="--d:80ms;"><img src="./proof9.png" alt="Proof 9" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal"><img src="./proof10.png" alt="Proof 10" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal" style="--d:40ms;"><img src="./proof11.png" alt="Proof 11" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
+        <div class="proof-tile reveal" style="--d:80ms;"><img src="./proof12.png" alt="Proof 12" loading="lazy" onerror="this.closest('.proof-tile').classList.add('is-missing')"><div class="proof-fallback">Proof Screenshot</div></div>
       </div>
     </div>
   </section>
@@ -155,6 +156,7 @@
     <div class="container">
       <div class="foot-top glass card">
         <div class="foot-brandline">
+          <!-- Raw logo (not contained) -->
           <img class="foot-logo" src="./logo2.png" alt="ONIX logo" loading="lazy">
           <div class="foot-bl">
             <div class="foot-title">ONIX</div>
@@ -172,7 +174,7 @@
           <div class="foot-col">
             <div class="foot-h">Navigate</div>
             <a href="./index.html#how">How it works</a>
-            <a href="./index.html#pricing">Pricing</a>
+            <a href="./index.html#pricing">Pricing Covered</a>
             <a href="./index.html#book">Book a Call</a>
           </div>
 
@@ -183,8 +185,8 @@
           </div>
 
           <div class="foot-col">
-            <div class="foot-h">Contact +64 21 563 431</div>
-            <div class="foot-muted">Email: sales@onixmrkt.com</div>
+            <div class="foot-h">Contact</div>
+            <div class="foot-muted">Email: hello@onix.com</div>
             <div class="foot-muted">Response: within 24h</div>
           </div>
         </div>
