--- a/index.html
+++ b/index.html
@@ -30,17 +30,13 @@
   <header class="header" data-header>
     <div class="container header-inner">
       <a class="brand" href="./index.html" aria-label="ONIX home">
-        <!-- Raw logo (not contained) -->
         <img class="brand-logo" src="./logo2.png" alt="ONIX logo" />
       </a>
 
       <nav class="nav" aria-label="Primary navigation">
         <a href="./results.html">Results Page</a>
         <a href="#how">How it works</a>
-
-        <!-- Pricing covered (instead of pricing) -->
         <a href="#pricing" class="is-muted">Pricing Covered</a>
-
         <a class="btn btn-primary btn-sm nav-cta" href="#book">Book a Call</a>
       </nav>
 
@@ -64,7 +60,7 @@
   <main class="section hero">
     <div class="container hero-grid">
       <div class="hero-left">
-        <div class="pill reveal">
+        <div class="pill reveal" data-tilt>
           <span class="pill-dot" aria-hidden="true"></span>
           Done-for-you acquisition + follow-up system
         </div>
@@ -84,7 +80,7 @@
           Real client messages • Unedited screenshots
         </div>
 
-        <!-- Clean proof row desktop, stack mobile (CSS handles) -->
+        <!-- Proof row: desktop horizontal / phone vertical -->
         <div class="proof-strip reveal" style="--d:320ms;">
           <div class="proof-track" aria-label="Proof screenshots">
             <div class="proof">
@@ -109,7 +105,7 @@
 
       <!-- Dashboard -->
       <aside class="hero-right reveal" style="--d:220ms;">
-        <div class="dash glass card">
+        <div class="dash glass card hover-lift" data-tilt>
           <div class="dash-top">
             <div>
               <div class="kicker">Live Dashboard</div>
@@ -127,25 +123,25 @@
           </div>
 
           <div class="kpi-grid" data-kpis>
-            <div class="kpi">
+            <div class="kpi hover-lift">
               <div class="kpi-label">New Enquiries</div>
               <div class="kpi-value" data-kpi="enquiries">38</div>
               <div class="kpi-delta up" data-kpi-delta="enquiries">+18%</div>
             </div>
 
-            <div class="kpi">
+            <div class="kpi hover-lift">
               <div class="kpi-label">Calls Booked</div>
               <div class="kpi-value" data-kpi="calls">12</div>
               <div class="kpi-delta up" data-kpi-delta="calls">+9%</div>
             </div>
 
-            <div class="kpi">
+            <div class="kpi hover-lift">
               <div class="kpi-label">Deals Won</div>
               <div class="kpi-value" data-kpi="deals">5</div>
               <div class="kpi-delta neutral" data-kpi-delta="deals">—</div>
             </div>
 
-            <div class="kpi">
+            <div class="kpi hover-lift">
               <div class="kpi-label">Revenue</div>
               <div class="kpi-value" data-kpi="revenue">$48,200</div>
               <div class="kpi-delta down" data-kpi-delta="revenue">-4%</div>
@@ -164,20 +160,11 @@
                   <stop offset="0" stop-color="#6A00FF" />
                   <stop offset="1" stop-color="#B388FF" />
                 </linearGradient>
-                <filter id="softGlow" x="-20%" y="-50%" width="140%" height="200%">
-                  <feGaussianBlur stdDeviation="4" result="b"/>
-                  <feMerge>
-                    <feMergeNode in="b"/>
-                    <feMergeNode in="SourceGraphic"/>
-                  </feMerge>
-                </filter>
               </defs>
 
               <path d="M20 92 C 60 70, 85 74, 110 66 C 135 58, 155 62, 180 52 C 205 42, 225 50, 250 36 C 275 22, 290 30, 300 22"
-                fill="none" stroke="url(#g)" stroke-width="4" stroke-linecap="round" filter="url(#softGlow)" data-spark-line></path>
-
-              <circle cx="110" cy="66" r="5" fill="#fff" stroke="#6A00FF" stroke-width="3" opacity="0.9" data-spark-dot></circle>
-              <circle cx="250" cy="36" r="5" fill="#fff" stroke="#B388FF" stroke-width="3" opacity="0.9" data-spark-dot></circle>
+                fill="none" stroke="url(#g)" stroke-width="4" stroke-linecap="round"
+                data-spark-line></path>
             </svg>
           </div>
 
@@ -206,7 +193,7 @@
       </div>
 
       <div class="outcome-grid">
-        <article class="outcome glass card reveal">
+        <article class="outcome glass card reveal hover-lift" data-tilt>
           <div class="outcome-ic">
             <svg viewBox="0 0 24 24" class="ic" aria-hidden="true">
               <path d="M4 12.5l5 5L20 6.5" fill="none" stroke="currentColor" stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round"/>
@@ -220,7 +207,7 @@
           </div>
         </article>
 
-        <article class="outcome glass card reveal" style="--d:80ms;">
+        <article class="outcome glass card reveal hover-lift" style="--d:80ms;" data-tilt>
           <div class="outcome-ic alt">
             <svg viewBox="0 0 24 24" class="ic" aria-hidden="true">
               <path d="M4 19c2.2-3.6 5.3-5.4 8.6-5.4 3.4 0 6.2 1.6 7.4 4.8" fill="none" stroke="currentColor" stroke-width="2.4" stroke-linecap="round"/>
@@ -235,7 +222,7 @@
           </div>
         </article>
 
-        <article class="outcome glass card reveal" style="--d:160ms;">
+        <article class="outcome glass card reveal hover-lift" style="--d:160ms;" data-tilt>
           <div class="outcome-ic alt2">
             <svg viewBox="0 0 24 24" class="ic" aria-hidden="true">
               <path d="M4 18V6" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"/>
@@ -321,7 +308,7 @@
           </div>
         </div>
 
-        <div class="engine-card glass card reveal" data-engine-card>
+        <div class="engine-card glass card reveal hover-lift" data-engine-card data-tilt>
           <div class="engine-card-top">
             <span class="engine-badge" data-engine-badge>Step 01</span>
             <span class="engine-badge">Built-in</span>
@@ -347,7 +334,7 @@
       </div>
 
       <div class="compare-grid">
-        <article class="compare glass card reveal">
+        <article class="compare glass card reveal hover-lift" data-tilt>
           <div class="compare-title">Before</div>
           <ul class="list">
             <li>Leads go cold after 15 minutes.</li>
@@ -356,7 +343,7 @@
           </ul>
         </article>
 
-        <article class="compare glass card reveal" style="--d:80ms;">
+        <article class="compare glass card reveal hover-lift" style="--d:80ms;" data-tilt>
           <div class="compare-title">After</div>
           <ul class="list">
             <li>Immediate response + smart routing.</li>
@@ -365,7 +352,7 @@
           </ul>
         </article>
 
-        <article class="timeline glass card reveal" style="--d:160ms;">
+        <article class="timeline glass card reveal hover-lift" style="--d:160ms;" data-tilt>
           <div class="timeline-top">
             <div class="timeline-title">Autopilot timeline</div>
             <div class="timeline-sub">What happens after a lead comes in.</div>
@@ -396,10 +383,10 @@
       <div class="section-head reveal">
         <div class="eyebrow">Pricing</div>
         <h2 class="h2">Pricing covered — book a call for the details.</h2>
-        <p class="p">We keep pricing off the public page because scope varies by industry, offer, and volume. We’ll map the engine to your pipeline on a quick call.</p>
+        <p class="p">We keep pricing off the public page because scope varies by industry, offer, and volume.</p>
       </div>
 
-      <div class="pricing-covered glass card reveal">
+      <div class="pricing-covered glass card reveal hover-lift" data-tilt>
         <div class="pc-left">
           <div class="pc-kicker">What you’ll get on the call</div>
           <ul class="list">
@@ -431,7 +418,7 @@
         <p class="p">Drop into a 15-minute call and we’ll map the fastest path to more booked calls.</p>
       </div>
 
-      <div class="book-card glass card reveal">
+      <div class="book-card glass card reveal hover-lift" data-tilt>
         <div class="book-left">
           <h3>What we’ll cover</h3>
           <div class="book-bullets">
@@ -454,7 +441,6 @@
     <div class="container">
       <div class="foot-top glass card">
         <div class="foot-brandline">
-          <!-- Raw logo (not contained) -->
           <img class="foot-logo" src="./logo2.png" alt="ONIX logo" loading="lazy">
           <div class="foot-bl">
             <div class="foot-title">ONIX</div>
