--- a/results.html
+++ b/results.html
@@ -25,11 +25,9 @@
     <div class="vignette"></div>
   </div>
 
-  <!-- Header -->
   <header class="header" data-header>
     <div class="container header-inner">
       <a class="brand" href="./index.html" aria-label="ONIX home">
-        <!-- Raw logo (not contained) -->
         <img class="brand-logo" src="./logo2.png" alt="ONIX logo" />
       </a>
 
@@ -55,7 +53,6 @@
     </div>
   </header>
 
-  <!-- Results Hero -->
   <main class="section results-hero">
     <div class="container results-grid">
       <div>
@@ -66,7 +63,7 @@
         </div>
 
         <div class="stats-row">
-          <article class="stat glass card reveal">
+          <article class="stat glass card reveal hover-lift" data-tilt>
             <div class="stat-top">
               <div class="stat-k">Bottom line</div>
               <div class="stat-v">$100k+</div>
@@ -74,7 +71,7 @@
             <div class="stat-s">Added profit across implementations.</div>
           </article>
 
-          <article class="stat glass card reveal" style="--d:80ms;">
+          <article class="stat glass card reveal hover-lift" style="--d:80ms;" data-tilt>
             <div class="stat-top">
               <div class="stat-k">Return</div>
               <div class="stat-v">$110k</div>
@@ -82,7 +79,7 @@
             <div class="stat-s">From ~17k spend in one example.</div>
           </article>
 
-          <article class="stat glass card reveal" style="--d:160ms;">
+          <article class="stat glass card reveal hover-lift" style="--d:160ms;" data-tilt>
             <div class="stat-top">
               <div class="stat-k">Lead flow</div>
               <div class="stat-v">20–25</div>
@@ -92,24 +89,24 @@
         </div>
 
         <div class="quotes">
-          <article class="quote glass card reveal">
+          <article class="quote glass card reveal hover-lift" data-tilt>
             <p>“We stopped chasing leads and started showing up to booked calls. The follow-up is relentless but doesn’t feel spammy.”</p>
             <div class="quote-by">— Local service owner</div>
           </article>
 
-          <article class="quote glass card reveal" style="--d:80ms;">
+          <article class="quote glass card reveal hover-lift" style="--d:80ms;" data-tilt>
             <p>“The pipeline finally makes sense. Replies increased immediately and the calendar filled up within the first week.”</p>
             <div class="quote-by">— Trade business</div>
           </article>
 
-          <article class="quote glass card reveal" style="--d:160ms;">
+          <article class="quote glass card reveal hover-lift" style="--d:160ms;" data-tilt>
             <p>“Best part is visibility. We can see what’s working and where leads drop off — then fix it.”</p>
             <div class="quote-by">— Agency operator</div>
           </article>
         </div>
       </div>
 
-      <aside class="embed-card glass card reveal" style="--d:120ms;">
+      <aside class="embed-card glass card reveal hover-lift" style="--d:120ms;" data-tilt>
         <div class="embed-card-top">
           <div>
             <div class="kicker">Book now</div>
@@ -125,7 +122,6 @@
     </div>
   </main>
 
-  <!-- Proof grid -->
   <section id="proof" class="section">
     <div class="container">
       <div class="section-head reveal">
@@ -151,12 +147,10 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="footer">
     <div class="container">
       <div class="foot-top glass card">
         <div class="foot-brandline">
-          <!-- Raw logo (not contained) -->
           <img class="foot-logo" src="./logo2.png" alt="ONIX logo" loading="lazy">
           <div class="foot-bl">
             <div class="foot-title">ONIX</div>
