--- a/results.html
+++ b/results.html
@@ -5,7 +5,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>ONIX — Results</title>
   <meta name="description" content="Client results and proof screenshots for ONIX." />
   <link rel="icon" href="./logo2.png" />
@@ -32,7 +32,7 @@
       </a>
 
       <nav class="nav" aria-label="Primary navigation">
-        <a href="./results.html" class="is-current">Results Page</a>
+        <a href="./results.html" class="is-current">Results</a>
         <a href="./index.html#how">How it works</a>
         <a href="./index.html#pricing" class="is-muted">Pricing Covered</a>
         <a class="btn btn-primary btn-sm nav-cta" href="./index.html#book">Book a Call</a>
@@ -45,7 +45,7 @@
 
     <div id="mobileNav" class="mobile-nav" hidden data-mobile-nav>
       <div class="container mobile-nav-inner">
-        <a href="./results.html">Results Page</a>
+        <a href="./results.html">Results</a>
         <a href="./index.html#how">How it works</a>
         <a href="./index.html#pricing">Pricing Covered</a>
         <a class="btn btn-primary btn-block" href="./index.html#book">Book a Call</a>
@@ -115,9 +115,13 @@
           <a class="btn btn-primary btn-sm" href="./index.html#book">Home →</a>
         </div>
         <div class="embed-wrap">
-          <iframe class="calendly" title="Calendly booking" src="https://calendly.com/" loading="lazy"></iframe>
+          <iframe
+            class="calendly"
+            title="Calendly booking"
+            src="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01"
+            loading="lazy"></iframe>
         </div>
-        <p class="embed-note">Replace with your Calendly URL.</p>
+        <p class="embed-note">Email: sales@onixmrkt.com • +64 21 563 431</p>
       </aside>
     </div>
   </main>
@@ -161,27 +165,28 @@
 
         <div class="footer-grid">
           <div class="foot-col">
-            <div class="foot-h">What we do</div>
+            <div class="foot-h">About</div>
             <p class="foot-p">We turn enquiries into booked calls with a simple, measurable follow-up engine — installed for you.</p>
           </div>
 
           <div class="foot-col">
-            <div class="foot-h">Navigate</div>
+            <div class="foot-h">Links</div>
             <a href="./index.html#how">How it works</a>
             <a href="./index.html#pricing">Pricing Covered</a>
             <a href="./index.html#book">Book a Call</a>
           </div>
 
           <div class="foot-col">
-            <div class="foot-h">Proof</div>
-            <a href="#proof">Screenshots</a>
-            <a href="./index.html#results">Outcomes</a>
+            <div class="foot-h">Contact</div>
+            <div class="foot-muted">Email: sales@onixmrkt.com</div>
+            <div class="foot-muted">Phone: +64 21 563 431</div>
+            <div class="foot-muted">49 Golf Road Tauranga New Zealand, 3116</div>
           </div>
 
           <div class="foot-col">
-            <div class="foot-h">Contact</div>
-            <div class="foot-muted">Email: hello@onix.com</div>
-            <div class="foot-muted">Response: within 24h</div>
+            <div class="foot-h">Response</div>
+            <div class="foot-muted">Within 24 hours</div>
+            <a class="link" href="./index.html#book">Book now →</a>
           </div>
         </div>
 
