--- a/results.html
+++ b/results.html
@@ -47,7 +47,7 @@
       <div class="container mobile-nav-inner">
         <a href="./results.html">Results</a>
         <a href="./index.html#how">How it works</a>
-        <a href="./index.html#pricing">Pricing Covered</a>
+        <a href="./index.html#pricing">Pricing</a>
         <a class="btn btn-primary btn-block" href="./index.html#book">Book a Call</a>
       </div>
     </div>
