--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav class="nav" aria-label="Primary navigation">
         <a href="./results.html">Results</a>
         <a href="#how">How it works</a>
-        <a href="#pricing" class="is-muted">Pricing Covered</a>
+        <a href="#pricing" class="is-muted">Pricing</a>
         <a class="btn btn-primary btn-sm nav-cta" href="#book">Book a Call</a>
       </nav>
 
@@ -50,7 +50,7 @@
       <div class="container mobile-nav-inner">
         <a href="./results.html">Results</a>
         <a href="#how">How it works</a>
-        <a href="#pricing">Pricing Covered</a>
+        <a href="#pricing">Pricing</a>
         <a class="btn btn-primary btn-block" href="#book">Book a Call</a>
       </div>
     </div>
@@ -329,7 +329,7 @@
     <div class="container">
       <div class="section-head reveal">
         <div class="eyebrow">Pricing</div>
-        <h2 class="h2">Pricing covered — book a call for the details.</h2>
+        <h2 class="h2">Pricing — book a call for the details.</h2>
         <p class="p">We keep pricing off the public page because scope varies by industry, offer, and volume.</p>
       </div>
 
@@ -416,7 +416,7 @@
             <div class="foot-h">Links</div>
             <a href="./results.html">Results</a>
             <a href="#how">How it works</a>
-            <a href="#pricing">Pricing Covered</a>
+            <a href="#pricing">Pricing</a>
             <a href="#book">Book a Call</a>
           </div>
 
@@ -424,7 +424,7 @@
             <div class="foot-h">Contact</div>
             <div class="foot-muted">Email: sales@onixmrkt.com</div>
             <div class="foot-muted">Phone: +64 21 563 431</div>
-            <div class="foot-muted">49 Golf Road Tauranga New Zealand, 3116</div>
+            <div class="foot-muted">92 Comers Road, Kaimarama 3591, New Zealand</div>
           </div>
 
           <div class="foot-col">
@@ -452,3 +452,4 @@
 <!-- =========================
      END: index.html
 ========================= -->
+
