--- a/results.html
+++ b/results.html
@@ -34,7 +34,7 @@
       <nav class="nav" aria-label="Primary navigation">
         <a href="./results.html" class="is-current">Results</a>
         <a href="./index.html#how">How it works</a>
-        <a href="./index.html#pricing" class="is-muted">Pricing Covered</a>
+        <a href="./index.html#pricing" class="is-muted">Pricing</a>
         <a class="btn btn-primary btn-sm nav-cta" href="./index.html#book">Book a Call</a>
       </nav>
 
@@ -172,7 +172,7 @@
           <div class="foot-col">
             <div class="foot-h">Links</div>
             <a href="./index.html#how">How it works</a>
-            <a href="./index.html#pricing">Pricing Covered</a>
+            <a href="./index.html#pricing">Pricing</a>
             <a href="./index.html#book">Book a Call</a>
           </div>
 
@@ -180,7 +180,7 @@
             <div class="foot-h">Contact</div>
             <div class="foot-muted">Email: sales@onixmrkt.com</div>
             <div class="foot-muted">Phone: +64 21 563 431</div>
-            <div class="foot-muted">49 Golf Road Tauranga New Zealand, 3116</div>
+            <div class="foot-muted">92 Comers Road, Kaimarama 3591, New Zealand</div>
           </div>
 
           <div class="foot-col">
