--- a/index.html
+++ b/index.html
@@ -79,6 +79,75 @@
           <span class="microproof-dot" aria-hidden="true"></span>
           Real client messages • Unedited screenshots
         </div>
+           <!-- =========================
+     START: Counters (Results)
+========================= -->
+<section class="section" id="counters">
+  <div class="container">
+    <div class="counters glass reveal">
+      <div class="counter-card">
+        <div class="counter-ico" aria-hidden="true">
+          <!-- bar chart -->
+          <svg viewBox="0 0 24 24" fill="none">
+            <path d="M4 19h16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M6 17V11" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M11 17V7" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M16 17V13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M6 9l4-3 3 2 5-4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </div>
+        <div class="counter-num" data-count="127370900">0</div>
+        <div class="counter-label">Sales Revenue 2001–2022</div>
+      </div>
+
+      <div class="counter-card">
+        <div class="counter-ico" aria-hidden="true">
+          <!-- calendar -->
+          <svg viewBox="0 0 24 24" fill="none">
+            <path d="M7 3v3M17 3v3" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M4 8h16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M6 6h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2Z" stroke="currentColor" stroke-width="2"/>
+            <path d="M8 12h3M13 12h3M8 16h3M13 16h3" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+        </div>
+        <div class="counter-num" data-count="1443">0</div>
+        <div class="counter-label">Client Meetings</div>
+      </div>
+
+      <div class="counter-card">
+        <div class="counter-ico" aria-hidden="true">
+          <!-- target -->
+          <svg viewBox="0 0 24 24" fill="none">
+            <path d="M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z" stroke="currentColor" stroke-width="2"/>
+            <path d="M12 22a10 10 0 1 0-7.07-2.93" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M22 2l-7 7" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M15 2h7v7" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+        </div>
+        <div class="counter-num" data-count="34215">0</div>
+        <div class="counter-label">Leads Generated</div>
+      </div>
+
+      <div class="counter-card">
+        <div class="counter-ico" aria-hidden="true">
+          <!-- users -->
+          <svg viewBox="0 0 24 24" fill="none">
+            <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M9 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z" stroke="currentColor" stroke-width="2"/>
+            <path d="M22 21v-2a4 4 0 0 0-3-3.87" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M16 3.13a4 4 0 0 1 0 7.75" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+        </div>
+        <div class="counter-num" data-count="897">0</div>
+        <div class="counter-label">Clients</div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- =========================
+     END: Counters (Results)
+========================= -->
+
 
         <!-- Proof row: desktop horizontal / phone vertical -->
         <div class="proof-strip reveal" style="--d:320ms;">
@@ -452,4 +521,5 @@
 <!-- =========================
      END: index.html
 ========================= -->
+
 
