--- a/results.html
+++ b/results.html
@@ -241,7 +241,7 @@ START: results.html
     </footer>
   </main>
 
-  <!-- Intake Modal (same as index) -->
+  <!-- Intake Modal -->
   <div class="modal" id="intakeModal" aria-hidden="true">
     <div class="modal-backdrop" data-close-modal></div>
 
@@ -314,7 +314,7 @@ START: results.html
           <textarea name="notes" rows="3" placeholder="Service area, job types, current lead sources..."></textarea>
         </label>
 
-        <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
+        <button class="btn btn-primary btn-lg btn-block form-submit" type="submit">Submit</button>
 
         <p class="form-fine">By submitting, you agree to be contacted about your request.</p>
 
