--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ START: index.html
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./styles.css" />
+<link rel="stylesheet" href="./styles.css?v=20260112-01">
 </head>
 
 <body>
@@ -555,9 +555,10 @@ START: index.html
     </div>
   </div>
 
-  <script src="./script.js" defer></script>
+<script src="./script.js?v=20260112-01" defer></script>
 </body>
 </html>
 <!-- =========================
 END: index.html
 ========================= -->
+
